Correção yml versão .net

--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.x' # versão do .net usada
+          dotnet-version: '6.0.200' # versão do .net usada
 
       - name: Restore dependencies
         run: dotnet restore github4women/*.csproj
